[package]
name = "wpi-trajectory-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "4.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uom = "0.35.0"
